# ai_sandbox

./: .gitignore  .pylintrc  LICENSE  README.md  logging.conf  package.json  requirements.txt  run-backend.py  vite.config.js
ann/: Bidirectional Associative Memories.ipynb  Navigation ANN keras.ipynb  Navigation ANN torch.ipynb  ODE_NN.py  ODE_NN.true.py  XOR ANN keras.ipynb  XOR ANN torch.ipynb  ann_xor_function_keras.py  ann_xor_function_pytorch.py  astar.js  hebb.py  invariants.py  isaac.js  mlp.py  nav_model.txt  nav_robot_test.csv  nav_robot_train.csv  navigation.py  neuron.py  reed_solomon.py  scheduler.py  training.js  world.js
ann/navigation.1.model/: saved_model.pb  (+1 more)
arc/: Hippocampus.ipynb  README.md  arc.ipynb  hierarchical.ipynb  hierarchical_negative.ipynb  hierarchical_som.ipynb  hopfield-clean.seq  hopfield-small.seq  hopfield.ipynb  kohonen.ipynb  main.py  meson.build  network.py  neuron.py
arc/src/: arc.cpp  arc.h  main.cpp  math.h  neuron.cpp  neuron.h  scheduler.h  task.h
backend/: server.py
gui/: app.js  camera.js  draw-scene.js  emotions.html  emotions.js  frag.glsl  gl-line-3d.js  index.html  init-buffers.js  init-shaders.js  inverse-dynamics.html  qu-robot.html  qu-robot.js  robot-go.html  scene.js  styles.css  vert.glsl
mdp/: MDP.ipynb  actions.py  adp.py  agent.py  experiment.py  mdp.py  policyiteration.py  world.py
rl/: agent.py  blueredenv.py  game.py  helper.py  model.py  q.py  replay.py  snake.ipynb  train.py  walkenv.py  walkenv2.py
rule_based/: pattern.py  rule.py  rule_parser.py  values.rules
tex/: ann_intro.tex  bibfile.bib
(+9 files in other folders)
